--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 * linguist-vendored
-*.Flask linguist-vendored=false
+*.python linguist-vendored=false
